RESOLVED FIXED286177
AX: Fix crashes in tests doctype-node-in-text-marker-crash.html, roles-computedRoleString.html, and roles-exposed.html in ENABLE(AX_THREAD_TEXT_APIS)
https://bugs.webkit.org/show_bug.cgi?id=286177
Summary AX: Fix crashes in tests doctype-node-in-text-marker-crash.html, roles-comput...
Tyler Wilcock
Reported 2025-01-17 16:32:31 PST
...
Attachments
Tyler Wilcock
Comment 1 2025-01-17 16:51:41 PST
Radar WebKit Bug Importer
Comment 2 2025-01-17 16:51:52 PST
Tyler Wilcock
Comment 3 2025-01-17 16:52:28 PST
Tyler Wilcock
Comment 4 2025-01-17 17:02:24 PST
EWS
Comment 5 2025-01-21 23:06:59 PST
Committed 289229@main (b62e70f7035d): <https://commits.webkit.org/289229@main> Reviewed commits have been landed. Closing PR #39224 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.